--- a/说明.md
+++ b/说明.md
@@ -2,12 +2,12 @@
 ### 用于将shell脚本转换为C代码的工具
 ## 安装
 ```bash
-cc -s shellc.c -o shellc
+cc -s shellc.c -O2 -o shellc
 ```
 ### 编译shell脚本并生成可执行程序
 ```bash
 shellc example.sh
-cc -s example.sh.c -o example
+cc -s example.sh.c -O2 -o example
 ```
 生成的C代码是 ```example.sh.c```，即原始文件名后加```.c```。
 对于生产环境中使用的程序，建议在编译时添加参数```-s```, 以删除可执行程序中的符号表，增加了反汇编和逆向工程的难度。
