--- a/说明.md
+++ b/说明.md
@@ -2,12 +2,12 @@
 **shell脚本转换为c代码的工具**
 ### 安装
 ```bash
-cc -s shellc.c -O2 -o shellc
+cc -s shellc.c -O2 -o shellc 
 ```
 ### 编译shell脚本并生成可执行程序
 ```bash
 shellc example.sh
-cc -s example.sh.c -O2 -o example
+cc -s example.sh.c -O2 -o example -lpthread
 ```
 生成的C代码是 ```example.sh.c```，即原始文件名后加```.c```。
 对于生产环境中使用的程序，建议在编译时添加参数```-s```, 以删除可执行程序中的符号表，增加了反汇编和逆向工程的难度。
@@ -16,15 +16,38 @@ cc -s example.sh.c -O2 -o example
 - ```shc``` 实际调用的是```sh -c``` 命令，通过```ps -ef``` 命令就能看到源码。shell脚本长度不能超过ARG_MAX值。
 - ```shellcrypt```不支持外部参数输入，加密算法相对简单。生成的可执行程序可以通过与```0x000C```进行异或解密来获得源代码。
 
-shellc除了解决上述这两工具存在的问题外，还增加了代码混淆和随机生成有效字符位置计算函数增加反汇编逆向复杂度。
-如果需要进一步增加逆向难度，还可使用```obfuscator-llvm```等专业工具对生成后的C代码进一步进行混淆。
-
+shellc除了解决上述这两工具存在的问题外，还增加了代码混淆、随机生成有效字符位置计算函数、随机字符加密、反调试等增加反汇编逆向复杂度。
 该程序适用于可定义函数语法的shell，如```ksh```、```bsh```、```zsh```等，不支持```csh```（```csh```不支持函数定义）。
-目前，该程序已在```AIX7.1```、```SCO UNIX5.0.6```、 ```Red Hat Linux7.8```、```CentOS Linux6.4```环境中进行了测试并具有实际应用。建议对编译后的程序进行全面测试，以防止生产故障。
+目前，该程序已在```AIX```、```UNIX```、 ```Linux``` 环境中具有实际应用。建议对编译后的程序进行全面测试，以防止生产故障。
 
 **如果shell脚本涉及人机交互，需对原shell脚本做一些修改，``` read input ``` 需改为 ``` read input </dev/tty ```。**
 
+0.3版本增加了反调试功能上，并且测试了以下工具反调试功能
+操作系统| 调试工具|是否支持
+------|------|------
+AIX 7.1|dbx sdb|支持
+SCO UNIX 5.0.6|dbx sdb adb|支持
+Red Hat Linux7.8|gdb|支持
+CentOS Linux6.4|gdb|支持
+debian 12.4.0|gdb|支持
+Fedora 39|gdb lldb|支持
+FreeBSD 14.0|gdb|支持
+openSUSE Leap 15.5|gdb|支持
+OracleLinux R9|gdb|支持
+ubuntu 22.04.3|gdb lldb|支持
+NetBSD 10.0|gdb|不支持
+DragonFly 6.4|gdb|不支持
+macOS 13|lldb|不支持
+
+**对于不支持反调试功能的系统，生成的代码需使用 -t 参数。 BSD和LINUX变种系统需支持线程才能启用反调试功能。**
+
 ### 修改记录
+- v0.3 2023-12-25
+
+  增加反调试功能
+ 
+  修复在部分系统下编译告警
+
 - v0.21 2023-12-13
 
   修复在```zsh```环境下程序BUG
