add non shell scripts support

--- a/说明.md
+++ b/说明.md
@@ -1,30 +1,62 @@
 # shellc
-**shell脚本转换为c代码的工具**
+**脚本语言转换为C代码的工具**
 ### 安装
 ```bash
 cc -s shellc.c -O2 -o shellc 
 ```
-### 编译shell脚本并生成可执行程序
+### 编译脚本并生成可执行程序
 ```bash
-shellc example.sh
-cc -s example.sh.c -O2 -o example -lpthread
+shellc sh example.sh
+cc -s example.sh.c -O2 -o example
 ```
 生成的C代码是 ```example.sh.c```，即原始文件名后加```.c```。
-对于生产环境中使用的程序，建议在编译时添加参数```-s```, 以删除可执行程序中的符号表，增加了反汇编和逆向工程的难度。
+对于生产环境中使用的程序，建议在编译时添加参数```-s```或编译后用```strip```命令, 以删除可执行程序中的符号表，增加了反汇编和逆向工程的难度。
 
 本人试用了可以将shell脚本编译成可执行程序的工具```shc``` 和 ```shellcrypt```，存在的主要问题是：
 - ```shc``` 实际调用的是```sh -c``` 命令，通过```ps -ef``` 命令就能看到源码。shell脚本长度不能超过ARG_MAX值。
 - ```shellcrypt```不支持外部参数输入，加密算法相对简单。生成的可执行程序可以通过与```0x000C```进行异或解密来获得源代码。
 
 shellc除了解决上述这两工具存在的问题外，还增加了代码混淆、随机生成有效字符位置计算函数、随机字符加密、反调试等增加反汇编逆向复杂度。
-该程序适用于可定义函数语法的shell，如```ksh```、```bsh```、```zsh```等，不支持```csh```（```csh```不支持函数定义）。
+1.0版本除了支持shell外，还增加其他脚本语言支持生成C代码，可以完全替代```shc```。
 目前，该程序已在```AIX```、```UNIX```、 ```Linux``` 环境中具有实际应用。建议对编译后的程序进行全面测试，以防止生产故障。
 
-**如果shell脚本涉及人机交互，需对原shell脚本做一些修改，``` read input ``` 需改为 ``` read input </dev/tty ```。**
+### 使用手册
+- 生成C代码命令
+ 
+   ``` shellc command inputfile [-t] [-s] [-f fix-argv0] ```  
 
-**注意：编译后的程序不支持$0参数，因为编译后程序实际执行的命令类似```cat script.sh|$SHELL```，$0对应的值是SHELL环境变量名，而非编译前的脚本程序名。**
+    command：    执行脚本的命令，如 ```sh```、```perl```、```python```、```node```、```ruby```、```Rscript```、```php``` 等。
 
-0.3版本增加了反调试功能，并且测试了以下工具反调试功能
+    inputfile： 脚本语言文件名
+
+    -t 选项：     对于不支持反调试功能的系统，生成的代码需该选项。
+
+    -s 选项：    生成C代码模式，-s选项是使用安全模式，缺省使用通用模式。
+
+    -f 选项：    修复参数0值。
+
+- 代码模式区别
+
+    通用模式shell脚本在大多数Linux类操作系统中存在部分代码可见问题，可通过```/proc/[pid]/fd/[pipe]```获取read命令后代码，安全模式无此问题。
+
+    通用模式运行在FreeBSD系统时，脚本中不能含有对标准错误设备文件描述符号2的操作，安全模式无此问题。
+
+    通用模式支持脚本中信号量捕获，安全模式不支持。
+
+    通用模式支持所有脚本语言的外部参数调用和人机交互，安全模式只支持可定义函数语法的shell。
+
+    安全模式人机交互``` read input ``` 需改为 ``` read input </dev/tty ```，通用模式无须修改代码。
+
+    安全模式与通用模式支持脚本语言类型部分不同，可通过运行``` test/run.sh```检查操作系统是否支持。
+
+- 参数0修复  
+    
+    参数0值支持```fish```、```zsh```、```perl```、```python```、```javascript```、```lua```、```ruby```修复，对应修复类型是这些脚本的大写字母。
+
+    除了内置的修复类型，还可使用自定义文件修复。自定义文件格式：```？```表示参数0值，换行必须明确使用```\n```，双引号需加转义符```\```。具体参考``` test/fix.txt```。
+
+### 反调试功能
+0.3及以上版本增加了反调试功能，并且测试了以下工具反调试功能
 操作系统| 调试工具|是否支持
 ------|------|------
 AIX 7.1|dbx sdb|支持
@@ -37,13 +69,22 @@ FreeBSD 14.0|gdb|支持
 openSUSE Leap 15.5|gdb|支持
 OracleLinux R9|gdb|支持
 ubuntu 22.04.3|gdb lldb|支持
+openEuler|gdb|支持
+Debian|gdb|支持
 NetBSD 10.0|gdb|不支持
 DragonFly 6.4|gdb|不支持
 macOS 13|lldb|不支持
 
-**对于不支持反调试功能的系统，生成的代码需使用 -t 参数。 BSD和LINUX变种系统需支持线程才能启用反调试功能。**
 
 ### 修改记录
+- v1.0 2024-06-01
+
+  增加非SHELL脚本语言支持
+
+  增加参数0修复功能
+
+  删除BSD和LINUX变种系统线程要求
+
 - v0.3 2023-12-25
 
   增加反调试功能
