Fix memory overflow

--- a/说明.md
+++ b/说明.md
@@ -92,9 +92,13 @@ macOS 13|lldb|不支持
 
 
 ### 修改记录
-- v1.6.1 2024-09-01
+- v1.6.2 2024-09-01
   
   修复内存溢出
+
+- v1.6.1 2024-09-01
+  
+  修复数组长度为空
 
 - v1.6 2024-09-01
 
