--- a/说明.md
+++ b/说明.md
@@ -22,13 +22,13 @@ cc example.sh.c -O2 -o example
   
   1. 内存转储等方式获取到脚本源代码，```kill -SIGSEGV ```
 
-  1. 通过文件描述符多次读取```/proc/<pid>/fd/3```获取到源码
+  1. 通过文件描述符多次读取```/proc/<pid>/fd/*```获取到源码
 
   1. 通过读取内存文件获取源代码
 
 ```shellc```1.8版已解决1-5点问题，第6点技术上无法解决，若是脚本语言是```bash```, 建议使用```xbash```，或者与```shellc```一起使用,  ```xbash```可以解决第6点问题。
 
-1.0及以上版本除了支持shell外，还支持其他脚本语言，可以完全替代```shc```。1.6版增加防伪造解释器或内存转储方式获取得脚本源代码功能。防伪造解释器需启用-a或-i选项。1.8版解决通过文件描述符获取到源码，1.8版不支持```ruby```, ```ruby```需使用1.7版。
+1.0及以上版本除了支持shell外，还支持其他脚本语言，可以完全替代```shc```。1.6版增加防伪造解释器或内存转储方式获取得脚本源代码功能。1.8版解决通过文件描述符获取到源码，1.8版不支持```ruby```, ```ruby```需使用1.7版。
 目前，该程序已在```AIX```、```UNIX```、 ```Linux``` 环境中具有实际应用。建议对编译后的程序进行全面测试，以防止生产故障。  
 
 ### 使用手册
@@ -36,19 +36,19 @@ cc example.sh.c -O2 -o example
  
    ```shellc command inputfile [-t] [-a] [-x] [-f fix-format] [-e fix-file] [-p parameter] [-i interpreter] [-b 8|16|32|64] [-d YYYYMMDD] [-m message]```  
 
-    command：   执行脚本的命令，如 ```sh```、```perl```、```python```、```node```、、```Rscript```、```php``` 等。
+    command：   执行脚本的命令，如 ```sh```、```perl```、```python```、```node```、```Rscript```、```php``` 等。
                 
     inputfile： 脚本语言文件名
 
     -t 选项：   对于不支持反调试功能的系统，生成的代码需该选项。
 
-    -x 选项：   脚本文件为```xbash```生成的二进制文件。
+    -x 选项：   脚本文件为[xbash](https://github.com/chenzhch/xbash)生成的二进制文件。
 
     -a 选项：   防止伪造解释器，要求运行环境的解释器与编译环境的解释器MD5值相同。
 
     -f 选项：   修复参数0值。
 
-    -e 选项：   使用外部文件修复参数0值，安全模式别名定义需写在外部文件中。  
+    -e 选项：   使用外部文件修复参数0值。  
 
     -p 选项：   命令参数，如```busybox shell```使用```shellc busybox example.sh -p sh``` 
 
