--- a/说明.md
+++ b/说明.md
@@ -42,7 +42,7 @@ cc example.sh.c -O2 -o example
 
     -t 选项：   对于不支持反调试功能的系统，生成的代码需该选项。
 
-    -x 选项：   脚本文件为[xbash](https://github.com/chenzhch/xbash)生成的二进制文件。
+    -x 选项：   脚本文件为[xbash](https://github.com/chenzhch/xbash)生成的无shebang二进制文件。
 
     -a 选项：   防止伪造解释器，要求运行环境的解释器与编译环境的解释器MD5值相同。
 
