--- a/说明.md
+++ b/说明.md
@@ -26,7 +26,7 @@ cc example.sh.c -O2 -o example
 
   1. 通过读取内存文件获取源代码
 
-```shellc```1.8版已解决1-5点问题，第6点技术上无法解决，若是脚本语言是```bash```, 建议使用```xbash```，或者与```shellc```一起使用,  ```xbash```可以解决第6点问题。
+```shellc```1.8版已解决1-3点问题，4-6点目前尚未完全解决，若是脚本语言是```bash```, 建议使用```xbash```，或者与```shellc```一起使用,  ```xbash```可以解决4-6点问题。
 
 1.0及以上版本除了支持shell外，还支持其他脚本语言，可以完全替代```shc```。1.6版增加防伪造解释器或内存转储方式获取得脚本源代码功能。1.8版解决通过文件描述符获取到源码，1.8版不支持```ruby```, ```ruby```需使用1.7版。
 目前，该程序已在```AIX```、```UNIX```、 ```Linux``` 环境中具有实际应用。建议对编译后的程序进行全面测试，以防止生产故障。  
