--- a/说明.md
+++ b/说明.md
@@ -91,7 +91,11 @@ macOS 13|lldb|不支持
 
 ### 修改记录
 
-- v1.8 2024-11-11
+- v1.8.2 2024-11-25
+  
+  修复问题#27
+
+- v1.8.1 2024-11-11
   
   修复特殊场景内存检测错误
 
