--- a/说明.md
+++ b/说明.md
@@ -1,5 +1,9 @@
 # shellc
 **脚本语言转换为C代码的工具**
+
+### 特别声明
+```shellc```开源历时约一年，发布版本约20次，但因存在技术上无法解决的问题，今后不再发布新版本。如果对代码保护要求不高，可以使用此工具，如果有较高的保护要求，切勿使用此类工具。采用管道方式传输给解释器的加密方式，技术上无法解决通过```strace```获取源代码，源码破解方法参见[decrypt](https://github.com/chenzhch/decrypt)。发布破解方法是希望有人能解决破解工具中存在的漏洞，同时也告知使用```shellc```此类工具的风险。如果脚本语言是```bash```, 请使用[xbash](https://github.com/chenzhch/xbash)工具。
+
 ### 安装
 ```bash
 cc shellc.c -O2 -o shellc 
@@ -24,9 +28,9 @@ cc example.sh.c -O2 -o example
 
   1. 通过文件描述符多次读取```/proc/<pid>/fd/*```获取到源码
 
-  1. 通过读取内存文件获取源代码
+  1. 通过读取内存文件或strace方式获取源代码
 
-```shellc```1.8版已解决1-3点问题，4-6点目前尚未完全解决，若是脚本语言是```bash```, 建议使用```xbash```，或者与```shellc```一起使用,  ```xbash```可以解决4-6点问题。
+```shellc```1.8版已解决1-3点问题，4-6点目前尚未完全解决，若是脚本语言是```bash```, 建议使用```xbash```，```xbash```可以解决4-6点问题。
 
 1.0及以上版本除了支持shell外，还支持其他脚本语言，可以完全替代```shc```。1.6版增加防伪造解释器或内存转储方式获取得脚本源代码功能。1.8版解决通过文件描述符获取到源码，1.8版不支持```ruby```, ```ruby```需使用1.7版。
 目前，该程序已在```AIX```、```UNIX```、 ```Linux``` 环境中具有实际应用。建议对编译后的程序进行全面测试，以防止生产故障。  
@@ -42,7 +46,7 @@ cc example.sh.c -O2 -o example
 
     -t 选项：   对于不支持反调试功能的系统，生成的代码需该选项。
 
-    -x 选项：   脚本文件为[xbash](https://github.com/chenzhch/xbash)生成的无shebang二进制文件。
+    -x 选项：   新版[xbash](https://github.com/chenzhch/xbash)已变为纯粹的代码转换工具， -x已无效。
 
     -a 选项：   防止伪造解释器，要求运行环境的解释器与编译环境的解释器MD5值相同。
 
